--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "next": "16.0.0",
     "next-themes": "^0.4.6",
     "openai": "^6.8.1",
+    "papaparse": "^5.5.3",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
     "react-dom": "19.2.0",
